--- a/environment.yml
+++ b/environment.yml
@@ -47,9 +47,9 @@ dependencies:
   - python=3.11.11=h89a136b_0_cpython
   - python_abi=3.11=8_cp311
   - readline=8.3=h0b18652_0
-  - rich=13.9.4=py311hca03da5_0
+  - rich=14.2.0=py311hca03da5_0
   - scipy=1.16.2=py311h53ebd84_0
-  - setuptools<81 # Pinned to prevent deprecation 
+  - setuptools=80.9.0=py311hca03da5_0
   - shellingham=1.5.0=py311hca03da5_0
   - sqlite=3.50.2=h79febb2_1
   - tk=8.6.15=hcd8a7d5_0
@@ -63,3 +63,4 @@ dependencies:
   - xz=5.6.4=h80987f9_1
   - zlib=1.3.1=h5f15de7_0
   - zstd=1.5.7=h817c040_0
+prefix: /opt/miniconda3/envs/morse_solver
