--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: morse_solver
 channels:
   - defaults
   - conda-forge
+  - nvidia
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -9,9 +10,14 @@ dependencies:
   - blas-devel=3.9.0=37_h1ea3ea9_openblas
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.34.5=hef5626c_0
-  - ca-certificates=2025.9.9=h06a4308_0
+  - ca-certificates=2025.10.5=hbd8a1cb_0
   - click=8.2.1=py311h06a4308_0
   - colorama=0.4.6=py311h06a4308_0
+  - cuda-nvrtc=13.0.88=hb0a779f_0
+  - cuda-version=13.0=3
+  - cuquantum-cuda-13=25.09.1.12=0
+  - cutensor=2.3.1=0
+  - cutensor-cuda-13=2.3.1=0
   - expat=2.7.1=h6a678d5_0
   - h5py=3.14.0=py311he0d80d8_0
   - hdf5=1.14.5=h2b7332f_2
@@ -20,7 +26,12 @@ dependencies:
   - libblas=3.9.0=37_h4a7cf45_openblas
   - libcblas=3.9.0=37_h0358290_openblas
   - libcint=6.1.3=h64ba90f_0
+  - libcublas=13.1.0.3=hf83d1bd_0
+  - libcuquantum-cuda-13=25.09.1.12=he2c82e0_0
+  - libcuquantum-dev-cuda-13=25.09.1.12=h7636ef1_0
   - libcurl=8.15.0=hc1efc7f_0
+  - libcutensor-cuda-13=2.3.1.0=h9bbfcaa_0
+  - libcutensor-dev-cuda-13=2.3.1.0=hf38cc2f_0
   - libev=4.33=h7f8727e_1
   - libffi=3.4.4=h6a678d5_1
   - libgcc=15.2.0=h767d61c_7
@@ -52,7 +63,7 @@ dependencies:
   - numpy-base=2.3.3=py311hf387b04_1
   - openblas=0.3.30=h5426c36_0
   - openblas-devel=0.3.30=h557178c_0
-  - openssl=3.0.18=hd6dcaed_0
+  - openssl=3.5.4=h26f9b46_0
   - packaging=25.0=py311h06a4308_1
   - pip=25.2=pyhc872135_1
   - pluggy=1.5.0=py311h06a4308_0
@@ -85,4 +96,19 @@ dependencies:
   - xz=5.6.4=h5eee18b_1
   - zlib=1.3.1=hb25bd0a_0
   - zstd=1.5.7=h11fc155_0
+  - pip:
+      - cudensitymat-cu13==0.3.1
+      - cupy-cuda12x==13.6.0
+      - cuquantum==25.9.1
+      - cuquantum-cu13==25.9.1
+      - custatevec-cu13==1.10.1
+      - cutensor-cu13==2.3.1
+      - cutensornet-cu13==2.9.1
+      - fastrlock==0.8.3
+      - geometric==1.1
+      - gpu4pyscf-cuda12x==1.4.3
+      - gpu4pyscf-libxc-cuda12x==0.5
+      - networkx==3.5
+      - pyscf-dispersion==1.3.0
+      - six==1.17.0
 prefix: /home/ubuntu/miniconda3/envs/morse_solver
