finally got real results, switched to cpu model

--- a/environment.yml
+++ b/environment.yml
@@ -1,114 +1,23 @@
 name: morse_solver
 channels:
-  - defaults
   - conda-forge
-  - nvidia
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - blas=2.137=openblas
-  - blas-devel=3.9.0=37_h1ea3ea9_openblas
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.34.5=hef5626c_0
-  - ca-certificates=2025.10.5=hbd8a1cb_0
-  - click=8.2.1=py311h06a4308_0
-  - colorama=0.4.6=py311h06a4308_0
-  - cuda-nvrtc=13.0.88=hb0a779f_0
-  - cuda-version=13.0=3
-  - cuquantum-cuda-13=25.09.1.12=0
-  - cutensor=2.3.1=0
-  - cutensor-cuda-13=2.3.1=0
-  - expat=2.7.1=h6a678d5_0
-  - h5py=3.14.0=py311he0d80d8_0
-  - hdf5=1.14.5=h2b7332f_2
-  - iniconfig=2.1.0=py311h06a4308_0
-  - ld_impl_linux-64=2.44=h153f514_2
-  - libblas=3.9.0=37_h4a7cf45_openblas
-  - libcblas=3.9.0=37_h0358290_openblas
-  - libcint=6.1.3=h64ba90f_0
-  - libcublas=13.1.0.3=hf83d1bd_0
-  - libcuquantum-cuda-13=25.09.1.12=he2c82e0_0
-  - libcuquantum-dev-cuda-13=25.09.1.12=h7636ef1_0
-  - libcurl=8.15.0=hc1efc7f_0
-  - libcutensor-cuda-13=2.3.1.0=h9bbfcaa_0
-  - libcutensor-dev-cuda-13=2.3.1.0=hf38cc2f_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.4.4=h6a678d5_1
-  - libgcc=15.2.0=h767d61c_7
-  - libgcc-ng=15.2.0=h69a702a_7
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libgomp=15.2.0=h767d61c_7
-  - liblapack=3.9.0=37_h47877c9_openblas
-  - liblapacke=3.9.0=37_h6ae95b6_openblas
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libnsl=2.0.0=h5eee18b_0
-  - libopenblas=0.3.30=h46f56fc_0
-  - libssh2=1.11.1=h251f7ec_0
-  - libstdcxx=15.2.0=h8f9b012_7
-  - libstdcxx-ng=15.2.0=h4852527_7
-  - libuuid=1.41.5=h5eee18b_0
-  - libxc-c=7.0.0=cpu_h75f4f88_4
-  - libxcb=1.17.0=h9b100fa_0
-  - libzlib=1.3.1=hb25bd0a_0
-  - lz4-c=1.9.4=h6a678d5_1
-  - markdown-it-py=4.0.0=py311h06a4308_0
-  - mdurl=0.1.2=py311h06a4308_0
-  - mpi=1.0=mpich
-  - mpi4py=4.0.3=py311hb6b6513_0
-  - mpich=4.1.1=hbae89fd_0
-  - ncurses=6.5=h7934f7d_0
-  - nomkl=3.0=0
-  - numpy=2.3.3=py311hc213724_1
-  - numpy-base=2.3.3=py311hf387b04_1
-  - openblas=0.3.30=h5426c36_0
-  - openblas-devel=0.3.30=h557178c_0
-  - openssl=3.5.4=h26f9b46_0
-  - packaging=25.0=py311h06a4308_1
-  - pip=25.2=pyhc872135_1
-  - pluggy=1.5.0=py311h06a4308_0
-  - pthread-stubs=0.3=h0ce48e5_1
-  - pyberny=0.6.3=pyhd8ed1ab_2
-  - pybind11-abi=4=hd3eb1b0_1
-  - pygments=2.19.1=py311h06a4308_0
-  - pyscf=2.11.0=py311h696c637_0
-  - pytest=8.4.2=py311h06a4308_0
-  - python=3.11.14=h6fa692b_0
-  - python_abi=3.11=2_cp311
-  - readline=8.3=hc2a1206_0
-  - rich=14.2.0=py311h06a4308_0
-  - scipy=1.16.2=py311ha592af2_0
-  - setuptools=80.9.0=py311h06a4308_0
-  - shellingham=1.5.0=py311h06a4308_0
-  - sqlite=3.50.2=hb25bd0a_1
-  - tk=8.6.15=h54e0aa7_0
-  - tqdm=4.67.1=py311h92b7b1e_0
-  - typer=0.17.4=py311h06a4308_0
-  - typing-extensions=4.15.0=py311h06a4308_0
-  - typing_extensions=4.15.0=py311h06a4308_0
-  - tzdata=2025b=h04d1e81_0
-  - wheel=0.45.1=py311h06a4308_0
-  - xcfun=2.1.1=h3b8ed35_8
-  - xorg-libx11=1.8.12=h9b100fa_1
-  - xorg-libxau=1.0.12=h9b100fa_0
-  - xorg-libxdmcp=1.1.5=h9b100fa_0
-  - xorg-xorgproto=2024.1=h5eee18b_1
-  - xz=5.6.4=h5eee18b_1
-  - zlib=1.3.1=hb25bd0a_0
-  - zstd=1.5.7=h11fc155_0
+  - python=3.11
+  - numpy
+  - scipy
+  - h5py
+  - pytest
+  - click
+  - typer
+  - rich
+  - mpi4py
+  - mpich
+  - pyscf
+  - pyberny
+  - tqdm
+  - packaging
+  - pip
   - pip:
-      - cudensitymat-cu13==0.3.1
-      - cupy-cuda12x==13.6.0
-      - cuquantum==25.9.1
-      - cuquantum-cu13==25.9.1
-      - custatevec-cu13==1.10.1
-      - cutensor-cu13==2.3.1
-      - cutensornet-cu13==2.9.1
-      - fastrlock==0.8.3
       - geometric==1.1
-      - gpu4pyscf-cuda12x==1.4.3
-      - gpu4pyscf-libxc-cuda12x==0.5
       - networkx==3.5
-      - pyscf-dispersion==1.3.0
-      - six==1.17.0
-prefix: /home/ubuntu/miniconda3/envs/morse_solver
+      - pyscf-dispersion
